bk_ida/gccida/c1/cpp_push_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2298:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 * cpp_push_buffer( 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2299:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfile, 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2307:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *result; // rax 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2315:26: error: expected expression
result = ( cpp_buffer_0 *)pfile->buffer_ob.object_base; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2315:12: error: use of undeclared identifier 'cpp_buffer_0'
result = ( cpp_buffer_0 *)pfile->buffer_ob.object_base; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2323:12: error: expected expression
*( _OWORD *)&result->cur = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2323:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->cur = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2324:12: error: expected expression
*( _OWORD *)&result->prev = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2324:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->prev = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2325:12: error: expected expression
*( _OWORD *)&result->rlimit = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2325:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->rlimit = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2326:12: error: expected expression
*( _OWORD *)&result->warned_cplusplus_comments = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2326:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->warned_cplusplus_comments = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2327:12: error: expected expression
*( _OWORD *)&result->dir.sysp = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2327:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->dir.sysp = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2328:12: error: expected expression
*( _OWORD *)&result->dir.ino = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2328:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->dir.ino = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2329:12: error: expected expression
*( _OWORD *)&result->dir.name = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/cpplib.c:2329:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->dir.name = 0LL; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_push_buffer/src/obj/cpplib.o] Error 1
